Added OverrideNingxIngressWhitelistAnnotation which allows for overriding what annotation should be used for whiteliste-source-range on the HTTP01 ingress
Signed-off-by: Anders Østhus <anders.osthus@.geodata.no>

--- a/deploy/crds/crd-challenges.yaml
+++ b/deploy/crds/crd-challenges.yaml
@@ -3289,6 +3289,9 @@ spec:
                                       type: object
                                       additionalProperties:
                                         type: string
+                                overrideNginxIngressWhitelistAnnotation:
+                                  description: OverrideNginxIngressWhitelistAnnotation add description here
+                                  type: string
                             name:
                               description: The name of the ingress resource that should have ACME challenge solving routes inserted into it in order to solve HTTP01 challenges. This is typically used in conjunction with ingress controllers like ingress-gce, which maintains a 1:1 mapping between external IPs and ingress resources.
                               type: string
