e2e tests for Gateway HTTP01 Solver
Signed-off-by: Jake Sanders <i@am.so-aweso.me>

--- a/test/e2e/framework/config/BUILD.bazel
+++ b/test/e2e/framework/config/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "addons.go",
         "certmanager.go",
         "config.go",
+        "gateway.go",
         "ginkgo.go",
         "helm.go",
         "ingress_controller.go",
