--- a/cmd/ctl/pkg/check/api/BUILD.bazel
+++ b/cmd/ctl/pkg/check/api/BUILD.bazel
@@ -6,12 +6,12 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/check/api",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/ctl/pkg/factory:go_default_library",
         "//cmd/util:go_default_library",
         "//pkg/util/cmapichecker:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
-        "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
         "@io_k8s_kubectl//pkg/scheme:go_default_library",
         "@io_k8s_kubectl//pkg/util/i18n:go_default_library",
         "@io_k8s_kubectl//pkg/util/templates:go_default_library",
