--- a/cmd/ctl/pkg/create/certificaterequest/BUILD.bazel
+++ b/cmd/ctl/pkg/create/certificaterequest/BUILD.bazel
@@ -6,10 +6,10 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/create/certificaterequest",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/ctl/pkg/factory:go_default_library",
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/ctl:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
@@ -19,11 +19,17 @@ go_library(
         "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_cli_runtime//pkg/resource:go_default_library",
-        "@io_k8s_client_go//rest:go_default_library",
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
         "@io_k8s_kubectl//pkg/util/i18n:go_default_library",
         "@io_k8s_kubectl//pkg/util/templates:go_default_library",
     ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["certificaterequest_test.go"],
+    embed = [":go_default_library"],
+    deps = ["//cmd/ctl/pkg/factory:go_default_library"],
 )
 
 filegroup(
@@ -38,10 +44,4 @@ filegroup(
     srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["certificaterequest_test.go"],
-    embed = [":go_default_library"],
 )
