--- a/cmd/ctl/pkg/version/BUILD.bazel
+++ b/cmd/ctl/pkg/version/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/version",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/ctl/pkg/factory:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/util/versionchecker:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
