addons: add Traefik to be used for HTTP-01 HTTPRoute solving
Signed-off-by: Maël Valais <mael@vls.dev>

--- a/devel/BUILD.bazel
+++ b/devel/BUILD.bazel
@@ -18,6 +18,7 @@ filegroup(
         "//devel/addon/pebble:all-srcs",
         "//devel/addon/sample-external-issuer:all-srcs",
         "//devel/addon/samplewebhook:all-srcs",
+        "//devel/addon/traefik:all-srcs",
         "//devel/addon/vault:all-srcs",
         "//devel/bin:all-srcs",
         "//devel/cluster:all-srcs",
