--- a/devel/addon/bind/manifests/configmap.yaml
+++ b/devel/addon/bind/manifests/configmap.yaml
@@ -39,6 +39,8 @@ data:
     ingress-nginx	IN	A {SERVICE_IP_PREFIX}.15
     *.gateway IN  A {SERVICE_IP_PREFIX}.14
     gateway IN  A {SERVICE_IP_PREFIX}.14
+    *.traefik IN  A {SERVICE_IP_PREFIX}.13
+    traefik IN  A {SERVICE_IP_PREFIX}.13
 
   db.dns01.example.com: |
     ;
